[package]
name = "gba-emulator"
version = "0.1.0"
edition = "2024"

[dependencies]
ambassador = "0.4.1"
bincode = "2.0.1"
bitvec = "1.0.1"
log = "0.4.26"
modular-bitfield = "0.11.2"
schemars = { version = "0.8.22", features = ["schemars_derive"] }
serde = { version = "1.0.219", features = ["derive"] }
serde_bytes = "0.11.17"
thiserror = "2.0.12"

[profile.dev]
opt-level = 3
incremental = false

[profile.release]
opt-level = 3
lto = "fat"
codegen-units = 1
panic = "abort"
strip = true
debug = false
incremental = false